Title: Upgrade to Spring Boot 4.0.2
Summary:
- Upgrade Spring Boot parent to 4.0.2.
- Migrate Web starter to `spring-boot-starter-webmvc` and tests to `spring-boot-starter-webmvc-test`.
- Align Testcontainers JUnit dependency with Boot 4.0 OpenRewrite changes.
- Apply small API modernization from OpenRewrite (String formatting).

OpenRewrite:
- Recipe: `org.openrewrite.java.spring.boot4.UpgradeSpringBoot_4_0`
- Plugin: `org.openrewrite.maven:rewrite-maven-plugin:6.28.0`
- Recipes: `org.openrewrite.recipe:rewrite-spring:6.23.0`

Testing:
- Not run (not requested).