@@ -17,7 +17,7 @@ public class SpringBootDemoApplication {
 
 	@GetMapping("/api/hello")
 	public String hello(@RequestParam(value = "name", defaultValue = "World") String name) {
-		return String.format("Hello %s!", name);
+		return "Hello %s!".formatted(name);
 	}
 
 }
